# QMeshcoreApp

./: .gitignore  CMakeLists.txt  README.md
qml/: Main.qml
qml/components/: ChannelsPanel.qml  ConnectionPanel.qml  ContactsPanel.qml  DeviceInfoPanel.qml  MapPanel.qml  MessagesPanel.qml  RxLogPanel.qml
scripts/: pair-ble-device.ps1
src/: main.cpp
src/meshcore/: MeshCoreConstants.cpp  MeshCoreConstants.h  MeshCoreDevice.cpp  MeshCoreDevice.h  MeshCoreDeviceController.cpp  MeshCoreDeviceController.h  qmeshcore_plugin.cpp  qmeshcore_plugin.h
src/meshcore/connection/: BleConnection.cpp  BleConnection.h  BluezAgent.cpp  BluezAgent.h  DBusBleConnection.cpp  DBusBleConnection.h  MeshCoreConnection.cpp  MeshCoreConnection.h  NusBleConnection.cpp  NusBleConnection.h  SerialConnection.cpp  SerialConnection.h  WinRtBlePairing.cpp  WinRtBlePairing.h
src/meshcore/models/: ChannelModel.cpp  ChannelModel.h  ContactModel.cpp  ContactModel.h  MessageModel.cpp  MessageModel.h  RxLogModel.cpp  RxLogModel.h
src/meshcore/types/: Advert.cpp  Advert.h  ChannelInfo.cpp  ChannelInfo.h  ChannelMessage.cpp  ChannelMessage.h  Contact.cpp  Contact.h  ContactMessage.cpp  ContactMessage.h  DeviceInfo.cpp  DeviceInfo.h  Packet.cpp  Packet.h  RepeaterStats.cpp  RepeaterStats.h  RxLogEntry.cpp  RxLogEntry.h  SelfInfo.cpp  SelfInfo.h  TelemetryData.cpp  TelemetryData.h  TraceData.cpp  TraceData.h
src/meshcore/utils/: BufferReader.cpp  BufferReader.h  BufferWriter.cpp  BufferWriter.h  CayenneLpp.cpp  CayenneLpp.h
